syntax = "proto3";

option csharp_namespace = "Climbing.Guide.Api.Services.Countries";

// The countries service definition.
service CountriesService {
  // Get grades by grade type
  rpc GetCountries (GetCountriesRequest) returns (GetCountriesReply);
}

// The response message containing the grading systems.
message GetCountriesReply {
    message Country {
       string id = 1;
       string name = 2;
       string code2 = 3;
       string code3 = 4;
       double latitude = 5;
       double longitude = 6;
    }
    int32 offset = 1;
    int32 count = 2;
    bool has_more = 3;
    repeated Country results = 4;
}

// The request message containing grade type.
message GetCountriesRequest {
    int32 offset = 1;
    int32 count = 2;
}