syntax = "proto3";

import "google/protobuf/empty.proto";

option csharp_namespace = "Climbing.Guide.Api.Services.Grades";

// The grades service definition.
service GradesService {
  // Gets grading systems
  rpc GetGradeSystems (google.protobuf.Empty) returns (GetGradeSystemsReply);
  // Get grades by grade type
  rpc GetGrades (GetGradesRequest) returns (GetGradesReply);
}

enum GradeSystemType {
    FRENCH = 0;
    FONT = 1;
    UIAA = 2;
    B = 3;
    V = 4;
    YOSEMITE = 5;
}

enum RouteType {
    BOULDER = 0;
    SPORT = 1;
    TRAD = 2;
}

message GradeSystem {
    GradeSystemType grade_type = 1;
    RouteType route_type = 2;
    string name = 3;
}

// The response message containing the grading systems.
message GetGradeSystemsReply {
    repeated GradeSystem results = 1;
}

// The request message containing grade type.
message GetGradesRequest {
    GradeSystemType type = 1;
}

message Grade {
    GradeSystemType type = 1;
    float value = 2;
    string name = 3;
}

// The response message containing the grades.
message GetGradesReply {
    repeated Grade results = 1;
}